[gd_scene load_steps=5 format=3 uid="uid://c8ibp0m848ibs"]

[ext_resource type="Script" uid="uid://c0l3tnv5sajx1" path="res://scripts/player_entity.gd" id="1_8b1co"]
[ext_resource type="Texture2D" uid="uid://8hdeb1ex4jnl" path="res://sprites/player_sprite.png" id="2_6nmcj"]
[ext_resource type="Texture2D" uid="uid://cevuj5hysob78" path="res://sprites/stuff/player/frog_eye.png" id="3_pywmm"]
[ext_resource type="Texture2D" uid="uid://cmpcn4tb887lc" path="res://sprites/stuff/player/player_shadow.png" id="4_iv4wl"]

[node name="PlayerEntity" type="Node2D"]
texture_filter = 3
script = ExtResource("1_8b1co")

[node name="SpriteTree" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_6nmcj")

[node name="Eye1" type="Sprite2D" parent="SpriteTree"]
z_index = 2
position = Vector2(-4, -5)
texture = ExtResource("3_pywmm")

[node name="Eye2" type="Sprite2D" parent="SpriteTree"]
z_index = 2
position = Vector2(4, -5)
texture = ExtResource("3_pywmm")

[node name="Shadow" type="Sprite2D" parent="SpriteTree"]
z_index = -1
texture = ExtResource("4_iv4wl")
